# opencv-learning

./: .gitignore  CMakeLists.txt  README.md  main.cpp
edge_detection/: CMakeLists.txt  main.cpp
image_basics/: CMakeLists.txt  main.cpp
video_basics/: main.cpp
